k8s/deploy/backend/base/backend-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-preview-svc
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
