k8s/deploy/backend/base/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - chat.operation.com
    secretName: chat-backend-tls-secret

  rules:
  - host: chat.operation.com

    http:
      paths:
      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-svc
            port:
              number: 5001
